tests/src/frontend/typechecking/invalid/tuple.sk
fun main(): void {
  void
}

fun test(): Bool {
  (x, _y) = (23, 22);
  x
}
